# robotx_control

./: CMakeLists.txt  package.xml
cfg/: RobotXDiffDriveController.cfg
include/robotx_control/: robotx_diff_drive_controller.h
include/vrx_control/: vrx_speed_controller.h
launch/: diff_drive_controller.launch  speed_controller.launch
src/: robotx_diff_drive_controller.cpp  robotx_diff_drive_controller_node.cpp  vrx_speed_controller.cpp  vrx_speed_controller_node.cpp
